--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ script:
 
 before_install:
     - sudo apt-get update -qq
+    - sudo apt-get install check -qq
     
 before_script:
     - cp doc/travis.rules.site rules.site
