--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
     - sudo apt-get install openssl libev-dev -qq
     - wget http://downloads.sourceforge.net/project/check/check/0.10.0/check-0.10.0.tar.gz -O /tmp/libcheck.tar.gz
     - tar xf /tmp/libcheck.tar.gz -C /tmp
-    - cd /tmp/check-0.10.0/ && ./configure --prefix=/usr && make && sudo make install
+    - (cd /tmp/check-0.10.0/ && ./configure --prefix=/usr && make && sudo make install)
     
 before_script:
     - cp doc/travis.rules.site rules.site
