Progressing with implementation of the established socket class.

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,6 @@
 LIB=libsccmn.a
 
-OBJS=boolean.o base32.o fd.o ini.o config.o log.o daemon.o sock_listen.o heartbeat.o frame.o fpool.o
+OBJS=boolean.o base32.o fd.o ini.o config.o log.o daemon.o sock_listen.o sock_est.o heartbeat.o frame.o fpool.o
 
 all: $(LIB)
 
