Adding generic implementation of double-linked list collection.

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,20 @@
 LIB=libsccmn.a
 
-OBJS=boolean.o base32.o fd.o ini.o config.o log.o daemon.o sock_listen.o sock_est.o heartbeat.o frame.o fpool.o context.o
+OBJS=\
+	boolean.o \
+	base32.o \
+	fd.o \
+	ini.o \
+	config.o \
+	log.o \
+	daemon.o \
+	sock_listen.o \
+	sock_est.o \
+	heartbeat.o \
+	frame.o \
+	fpool.o \
+	context.o \
+	cols/list.o \
 
 all: $(LIB)
 
