Adding example stun test to CI.

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ script:
     - (cd examples/reply/ && ./test_reply_02.sh)
     - (cd examples/reply/ && ./test_reply_03.sh)
     - (cd examples/forward/ && ./test_forward_01.sh)
+    - (cd examples/stun/ && ./test_stun_01.sh)
 
 before_install:
     - sudo apt-get update -qq
