--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ script:
     - (cd examples/forward/ && ./test_forward_01.sh)
     - (cd examples/stun/ && ./test_stun_01.sh)
     - (cd examples/sfetch/ && ./test_sfetch_01.sh)
+    - (cd examples/sreply/ && ./test_sreply_01.sh)
     - (cd examples/sreply/ && ./test_sreply_02.sh)
 
 before_install:
