Improving on code coverage integration.

--- a/test/Makefile
+++ b/test/Makefile
@@ -7,6 +7,9 @@ OBJS=main.o testutils.o $(patsubst %.c,%.o,$(wildcard utest_*.c))
 all: $(BIN)
 	@echo " [UT]" $(BIN)
 	@./$(BIN)
+ifdef USE_COVERAGE
+	gcov main.c
+endif
 
 LDLIBS+=-lcheck -L$(ROOTDIR)/src -lsccmn
 
