Improving code coverage support.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 language: c
 script:
-    - make clean all
-    - make examples
-    - make test
+    - make clean
+    - USE_COVERAGE=1 make all
+    - USE_COVERAGE=1 make examples
+    - USE_COVERAGE=1 make test
     - (cd examples/reply/ && ./test_reply_01.sh)
     - (cd examples/reply/ && ./test_reply_02.sh)
     - (cd examples/reply/ && ./test_reply_03.sh)
@@ -13,6 +14,7 @@ script:
     - (cd examples/sreply/ && ./test_sreply_01.sh)
     - (cd examples/sreply/ && ./test_sreply_02.sh)
     - (cd examples/sreply/ && ./test_sreply_03.sh)
+    - USE_COVERAGE=1 make coverage
 
 before_install:
     - sudo apt-get update -qq
