--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ script:
     - (cd examples/sreply/ && ./test_sreply_01.sh)
     - (cd examples/sreply/ && ./test_sreply_02.sh)
     - (cd examples/sreply/ && ./test_sreply_03.sh)
-#    - (cd examples/sfetch/ && ./test_sfetch_01.sh)
+    - (cd examples/sfetch/ && ./test_sfetch_01.sh)
     - (cd examples/http_server/ && ./test_httpserver_01.sh)
 
 before_install:
