--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,8 @@ script:
     - (cd examples/sfetch/ && ./test_sfetch_01.sh)
     - (cd examples/http_server/ && ./test_httpserver_01.sh)
     - (cd examples/http_server/ && ./test_httpserver_02.sh)
+    - (cd examples/http_server/ && ./test_httpserver_03.sh)
+    - (cd examples/http_server/ && ./test_httpserver_04.sh)
 
 before_install:
     - sudo apt-get update -qq
