Adjusting git ignore.

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,11 @@
 /examples/sreply/sreply
 /examples/http_server/httpserver
 
+/examples/protobuf/amessage.pb-c.c
+/examples/protobuf/amessage.pb-c.h
+/examples/protobuf/pb-recv
+/examples/protobuf/pb-send
+
 # Coverage files
 *.gcov
 *.gcda
