Initial implementation of SEQPACKET socket.

--- a/src/Makefile
+++ b/src/Makefile
@@ -10,6 +10,7 @@ OBJS=\
 	daemon.o \
 	sock/listener.o \
 	sock/stream.o \
+	sock/seqpacket.o \
 	mempool/frame.o \
 	mempool/pool.o \
 	mempool/zone.o \
