Shift from SEQPACKET to DGRAM socket type. Because Mac OS X doesn't support SCTP.

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 /test/unittest
 /test/log.txt
 /test/sock_stream_ssl_1_utest.bin
+/test/sock_dgram_1_utest.bin
 
 /examples/reply/reply
 /examples/forward/forward
