--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,8 @@ script:
     - (cd examples/http_server/ && ./test_httpserver_02.sh)
     - (cd examples/http_server/ && ./test_httpserver_03.sh)
     - (cd examples/http_server/ && ./test_httpserver_04.sh)
+    - (cd examples/socks/ && ./test_socks_01.sh)
+    - (cd examples/socks/ && ./test_socks_02.sh)
 
 before_install:
     - sudo apt-get update -qq
